--- a/src/app/menu/Menu.module.css
+++ b/src/app/menu/Menu.module.css
@@ -914,7 +914,7 @@
   .main {
     padding-top: 70px;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
   }
   
@@ -940,7 +940,7 @@
     position: relative;
     top: 0;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
   }
   
@@ -977,7 +977,7 @@
     top: 60px;
     z-index: 80;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
     background: rgba(245, 230, 211, 0.98);
   }
@@ -1011,7 +1011,7 @@
   .menuContent {
     padding: var(--space-md) 4%;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
   }
   
