--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -231,7 +231,7 @@
 @media (max-width: 1024px) {
   .header {
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     top: 0;
     left: 0;
     right: 0;
@@ -316,7 +316,7 @@
   .mobileOverlay {
     display: block;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -462,7 +462,7 @@
 
   .mobileMenu {
     width: 100vw;
-    max-width: 100vw;
+    max-width: 100%;
     padding: 4.5rem 1.25rem 2rem;
     border-radius: 0;
   }
